welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:68: error: not found: value faireColonne
			faireColonne();
                        ^